<resources>
    <string name="app_name">Account</string>
    <string name="title_account">账目</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sale_name">姓名</string>
    <string name="sale_name_hint">请输入姓名</string>
    <string name="sale_details">备注</string>
    <string name="sale_date">日期</string>
    <string name="sale_payed_label">已付款</string>
    <string name="sale_phone_num">联系电话</string>
    <string name="sale_call_phone">打电话</string>
    <string name="sale_money">金额</string>

    <string name="bills_save">保存</string>
</resources>
